crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__basic_element_with_text.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "tokenize(\"<span>Hello World!</span>\")"
---
[
    Token {
        data: "span",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "Hello World!",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "span",
        attrs: None,
        kind: CloseTag,
        is_implied: false,
    },
]
