crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__for_normal_self_closing_special_tag.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "(tokenize(\"<style />&apos;<br/>\"))"
---
[
    Token {
        data: "style",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "'",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "br",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "br",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
    Token {
        data: "style",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
