crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__for_normal_special_tag.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "parser_test(\"<style>a{}</style>&apos;<br/>\")"
---
[
    Token {
        data: "style",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a{}",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "style",
        attrs: None,
        kind: CloseTag,
        is_implied: false,
    },
    Token {
        data: "'",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "br",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "br",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
