crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__no_quote_attribute.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "tokenize(\"<div aaa=aaa >\")"
---
[
    Token {
        data: "div",
        attrs: Some(
            {
                "aaa": (
                    "aaa",
                    Unquoted,
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
