crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__special_script_tag.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "parser_test(\"<script /><div>1</div>\")"
---
[
    Token {
        data: "script",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "1",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: CloseTag,
        is_implied: false,
    },
    Token {
        data: "script",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
