crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__special_style_tag.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "parser_test(\"<style /><div></div>\")"
---
[
    Token {
        data: "style",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: CloseTag,
        is_implied: false,
    },
    Token {
        data: "style",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
