crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__special_title_tag.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "tokenize(\"<title /><div></div>\")"
---
[
    Token {
        data: "title",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: CloseTag,
        is_implied: false,
    },
    Token {
        data: "title",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
